# quartic

./: .travis.yml  Cargo.toml  LICENSE-MIT  README.md
src/: chord.rs  lib.rs  parser.rs
